--- a/VMS/VMS.csproj
+++ b/VMS/VMS.csproj
@@ -94,6 +94,21 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Emgu.CV">
+      <HintPath>..\References\Emgu.CV.dll</HintPath>
+    </Reference>
+    <Reference Include="Emgu.CV.GPU">
+      <HintPath>..\References\Emgu.CV.GPU.dll</HintPath>
+    </Reference>
+    <Reference Include="Emgu.CV.ML">
+      <HintPath>..\References\Emgu.CV.ML.dll</HintPath>
+    </Reference>
+    <Reference Include="Emgu.CV.UI">
+      <HintPath>..\References\Emgu.CV.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="Emgu.Util">
+      <HintPath>..\References\Emgu.Util.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
@@ -108,26 +123,77 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\WaterMarkTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Forms\AdminAddDest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AdminAddDest.Designer.cs">
+      <DependentUpon>AdminAddDest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\AdminDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AdminDashboard.Designer.cs">
+      <DependentUpon>AdminDashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\OldVisitor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\OldVisitor.Designer.cs">
+      <DependentUpon>OldVisitor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Admin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Admin.Designer.cs">
+      <DependentUpon>Admin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\NewVisitor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\NewVisitor.Designer.cs">
+      <DependentUpon>NewVisitor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Main.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Trainer.cs">
+    <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Trainer.Designer.cs">
-      <DependentUpon>Trainer.cs</DependentUpon>
+    <Compile Include="Forms\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ML.cs" />
-    <Compile Include="Services\MLBasis.cs" />
-    <Compile Include="ViewModel\ImageData.cs" />
-    <Compile Include="ViewModel\ImagePrediction.cs" />
+    <Compile Include="Services\Extension.cs" />
+    <Compile Include="Services\ML\FaceRecognition.cs" />
+    <Compile Include="Services\ML\ML.cs" />
+    <Compile Include="Services\PartialDB.cs" />
+    <EmbeddedResource Include="Forms\AdminAddDest.resx">
+      <DependentUpon>AdminAddDest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AdminDashboard.resx">
+      <DependentUpon>AdminDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\OldVisitor.resx">
+      <DependentUpon>OldVisitor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Admin.resx">
+      <DependentUpon>Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\NewVisitor.resx">
+      <DependentUpon>NewVisitor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -148,7 +214,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Resources\model.pb" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -166,28 +231,34 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="FodyWeavers.xml" />
+    <None Include="Resources\haarcascade_frontalface_default.xml" />
+    <None Include="Resources\highgui110.dll" />
+    <None Include="Resources\opencv_video220.dll" />
+    <None Include="Resources\opencv_objdetect220.dll" />
+    <None Include="Resources\opencv_ml220.dll" />
+    <None Include="Resources\opencv_legacy220.dll" />
+    <None Include="Resources\opencv_imgproc220.dll" />
+    <None Include="Resources\opencv_highgui220.dll" />
+    <None Include="Resources\opencv_gpu220.dll" />
+    <None Include="Resources\opencv_flann220.dll" />
+    <None Include="Resources\opencv_ffmpeg220.dll" />
+    <None Include="Resources\opencv_features2d220.dll" />
+    <None Include="Resources\opencv_core220.dll" />
+    <None Include="Resources\opencv_contrib220.dll" />
+    <None Include="Resources\opencv_calib3d220.dll" />
+    <None Include="Resources\cxcore110.dll" />
+    <None Include="Resources\cvextern.dll" />
+    <None Include="Resources\cvaux110.dll" />
+    <None Include="Resources\cv110.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Costura.Fody">
       <Version>4.1.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.ML">
-      <Version>1.4.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.ML.CpuMath">
-      <Version>1.4.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.ML.ImageAnalytics">
-      <Version>1.4.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.ML.TensorFlow">
-      <Version>1.4.0</Version>
-    </PackageReference>
-    <PackageReference Include="SciSharp.TensorFlow.Redist">
-      <Version>1.15.0</Version>
+    <PackageReference Include="LiteDB">
+      <Version>5.0.3</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="FodyWeavers.xml" />
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
