--- a/VMS/VMS.csproj
+++ b/VMS/VMS.csproj
@@ -126,6 +126,12 @@
     <Compile Include="Controls\WaterMarkTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Forms\BiometricPortSelect.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\BiometricPortSelect.Designer.cs">
+      <DependentUpon>BiometricPortSelect.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AdminAddDest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -170,10 +176,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Biometric.cs" />
     <Compile Include="Services\Extension.cs" />
     <Compile Include="Services\ML\FaceRecognition.cs" />
     <Compile Include="Services\ML\ML.cs" />
     <Compile Include="Services\PartialDB.cs" />
+    <EmbeddedResource Include="Forms\BiometricPortSelect.resx">
+      <DependentUpon>BiometricPortSelect.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\AdminAddDest.resx">
       <DependentUpon>AdminAddDest.cs</DependentUpon>
     </EmbeddedResource>
@@ -258,6 +268,9 @@
     </PackageReference>
     <PackageReference Include="LiteDB">
       <Version>5.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="SerialPortLib">
+      <Version>1.0.18</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
