--- a/VMS/VMS.csproj
+++ b/VMS/VMS.csproj
@@ -93,6 +93,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>VMS.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Emgu.CV">
       <HintPath>..\References\Emgu.CV.dll</HintPath>
@@ -125,6 +128,12 @@
   <ItemGroup>
     <Compile Include="Controls\WaterMarkTextBox.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Forms\AdminHistory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AdminHistory.Designer.cs">
+      <DependentUpon>AdminHistory.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\BiometricPortSelect.cs">
       <SubType>Form</SubType>
@@ -175,6 +184,9 @@
     <Compile Include="Services\ML\FaceRecognition.cs" />
     <Compile Include="Services\ML\ML.cs" />
     <Compile Include="Services\PartialDB.cs" />
+    <EmbeddedResource Include="Forms\AdminHistory.resx">
+      <DependentUpon>AdminHistory.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\BiometricPortSelect.resx">
       <DependentUpon>BiometricPortSelect.cs</DependentUpon>
     </EmbeddedResource>
@@ -233,6 +245,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="FodyWeavers.xml" />
+    <Content Include="VMS.ico" />
     <None Include="Resources\haarcascade_frontalface_default.xml" />
     <None Include="Resources\highgui110.dll" />
     <None Include="Resources\opencv_video220.dll" />
@@ -256,9 +269,6 @@
   <ItemGroup>
     <PackageReference Include="Costura.Fody">
       <Version>4.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="LiteDB">
-      <Version>5.0.3</Version>
     </PackageReference>
     <PackageReference Include="SerialPortLib">
       <Version>1.0.18</Version>
